vagrant-minikube-test/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-kube
spec:
  selector:
    app: hello-kube
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
