vagrant-minikube-test/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kube-ingress
spec:
  rules:
    - host: qualquerdns.local
      http:
        paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: hello-kube
                  port: 
                    number: 80
